--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>rebuilding-acquia</title>
   </head>
-  <body>
+  <body class="bg-grey-lighter font-sans">
     <noscript>
       <strong>We're sorry but rebuilding-acquia doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
