--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>rebuilding-acquia</title>
+    <title>Rebuilding Acquia</title>
   </head>
   <body class="antialiased bg-grey-lighter font-sans min-h-full flex flex-col flex-1">
     <noscript>
