Update colours in markup

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Rebuilding Acquia</title>
   </head>
-  <body class="antialiased bg-grey-lighter font-sans min-h-full flex flex-col flex-1">
+  <body class="antialiased bg-grey-2 font-sans min-h-full flex flex-col flex-1">
     <noscript>
       <strong>We're sorry but rebuilding-acquia doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
